force-app/main/default/objects/Resource__c/Resource__c.object-meta.xml
<CustomObject>
    <description>Project Team Resources</description>
    <label>Resource</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Resource ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>