force-app/main/default/objects/Resource__c/fields/Available_Work_Days__c.field-meta.xml
<CustomField>
    <fullName>Available_Work_Days__c</fullName>
    <label>Available Work Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>