force-app/main/default/objects/Resource__c/fields/Capacity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Hours__c</fullName>
    <label>Capacity (Hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>