force-app/main/default/objects/Resource__c/fields/Iteration__c.field-meta.xml
<CustomField>
    <fullName>Iteration__c</fullName>
    <label>Iteration</label>
    <referenceTo>Iteration__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>