force-app/main/default/objects/Resource__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Consultant</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Data Analyst</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Offshore Consultant</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Quality Assurance Analyst</fullName>
            </value>
            <value>
                <fullName>Senior Consultant</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
            <value>
                <fullName>Technical Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>